still need to fix overlay on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -455,7 +455,7 @@ a.image-project:after {
   text-align: center;
   font-size: 20px;
   padding: 130px;
-  background:rgba(0,0,0,0.6);
+  background:rgba(0,0,0,0.8);
   opacity:0;
   transition: all 0.5s;
   -webkit-transition: all 0.5s;
